samples/_failures_safe/1761159424_f1b1ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f66e6184.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
